reading rating data

--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,26 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table(\"anime.csv\", sep=\",\")"
+    "df = pd.read_table(\"anime.csv\", sep=\",\")\n",
+    "us = pd.read_table(\"rating.csv\", sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "animeList={}\n",
-    "genreList=defaultdict(list)"
+    "genreList=defaultdict(list)\n",
+    "userList=defaultdict(list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -48,8 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for index, row in df.iterrows():\n",
@@ -57,6 +63,16 @@
     "    if not df.loc[[index]]['genre'].isnull().values[0]:\n",
     "        for x in row['genre'].split(', '):\n",
     "            genreList[x].append(row['anime_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in us.iterrows():\n",
+    "    userList[row['user_id']].append((row['anime_id'],row['rating']))"
    ]
   },
   {
