added more stuff

--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -11,13 +11,16 @@
     "import csv\n",
     "from pprint import pprint\n",
     "from collections import defaultdict\n",
-    "import pandas as pd \n"
+    "import pandas as pd \n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_table(\"anime.csv\", sep=\",\")\n",
@@ -26,15 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "animeList={}\n",
-    "genreList=defaultdict(list)\n",
-    "userList=defaultdict(list)"
+    "animeList={} #Anime and their data\n",
+    "genreList=defaultdict(list) #Animes sorted by genre\n",
+    "userList=defaultdict(list) #User's list of anime and rating in a (anime_id,rating) structure\n",
+    "userRating=defaultdict(list) #User's rating\n",
+    "userCategory=defaultdict(set) #User's list of categories they have watched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# To Get data from animeList. dictionary = animeList['id']['data']\n",
+    "def getData(dictionary):\n",
+    "    if not dictionary.isnull().values[0]:\n",
+    "        return dictionary.values[0]\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
@@ -45,9 +66,12 @@
    },
    "outputs": [],
    "source": [
-    "# To Get data from animeList. dictionary = animeList['id']['data']\n",
-    "def getData(dictionary):\n",
-    "    return dictionary[0]"
+    "def getCategory(data):\n",
+    "    cat=[]\n",
+    "    if data:\n",
+    "        for x in data.split(', '):\n",
+    "            cat.append(x)\n",
+    "    return cat"
    ]
   },
   {
@@ -67,22 +91,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, row in us.iterrows():\n",
-    "    userList[row['user_id']].append((row['anime_id'],row['rating']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for index, row in us.iterrows():\n",
+    "    userList[row['user_id']].append(row['anime_id'])\n",
+    "    userRating[row['user_id']].append(row['rating'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in us.iterrows():\n",
+    "    if int(row['anime_id']) in animeList:\n",
+    "        catList= getCategory(getData(animeList[int(row['anime_id'])]['genre']))\n",
+    "        for x in catList:\n",
+    "            userCategory[row['user_id']].add(x)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Average rating per user including -1 for no review (KEEP or remove -1???)\n",
+    "averageUser=defaultdict(float)\n",
+    "stdUser=defaultdict(float)\n",
+    "for key in userRating:\n",
+    "    averageUser[key]=np.mean(userRating[key])\n",
+    "    stdUser[key]=np.std(userRating[key])"
+   ]
   }
  ],
  "metadata": {
